--- a/meggie_simpleplugin/configuration.json
+++ b/meggie_simpleplugin/configuration.json
@@ -3,6 +3,7 @@
     "name": "Simple plugin",
     "description": "Showcase a simple plugin structure",
     "author": "CIBR",
+    "publish": false,
     "tabs": [
         {
             "id": "preprocessing",
